// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`golden MIR a straight-line function 1`] = `
"export fn main: extern "C" () -> i32 {
  let _0: i32  [Owned/Trivial]
  let _1: i32  [Owned/Trivial] // a
  let _2: i32  [Owned/Trivial] // b
  let _3: i32  [Temporary/Trivial]

  bb0: {
    StorageLive(_1);
    _1 = 6_i32;
    StorageLive(_2);
    _2 = 7_i32;
    StorageLive(_3);
    _3 = copy _1 * copy _2;
    _0 = copy _3;
    StorageDead(_3);
    StorageDead(_2);
    StorageDead(_1);
    return;
  }
}
"
`;

exports[`golden MIR a branch, where the join is what drop flags are made of 1`] = `
"export fn main: extern "C" () -> i32 {
  let _0: i32  [Owned/Trivial]
  let _1: bool  [Owned/Trivial] // flag
  let _2: i32  [Owned/Trivial] // inner

  bb0: {
    StorageLive(_1);
    _1 = true;
    branch(copy _1) -> [true: bb1, false: bb2];
  }

  bb1: {
    StorageLive(_2);
    _2 = 1_i32;
    _0 = copy _2;
    StorageDead(_2);
    StorageDead(_1);
    return;
  }

  bb2: {
    _0 = 0_i32;
    StorageDead(_1);
    return;
  }
}
"
`;

exports[`golden MIR a loop with \`break\` and \`continue\` 1`] = `
"export fn main: extern "C" () -> i32 {
  let _0: i32  [Owned/Trivial]
  let _1: i32  [Owned/Trivial] // total
  let _2: i32  [Owned/Trivial] // i
  let _3: bool  [Temporary/Trivial]
  let _4: i32  [Owned/Trivial] // doubled
  let _5: i32  [Temporary/Trivial]
  let _6: bool  [Temporary/Trivial]
  let _7: bool  [Temporary/Trivial]
  let _8: i32  [Temporary/Trivial]
  let _9: i32  [Temporary/Trivial]

  bb0: {
    StorageLive(_1);
    _1 = 0_i32;
    StorageLive(_2);
    _2 = 0_i32;
    goto -> bb1;
  }

  bb1: {
    StorageLive(_3);
    _3 = copy _2 < 10_i32;
    branch(copy _3) -> [true: bb5, false: bb6];
  }

  bb2: {
    StorageLive(_5);
    _5 = copy _2 * 2_i32;
    StorageLive(_4);
    _4 = copy _5;
    StorageDead(_5);
    StorageLive(_6);
    _6 = copy _4 > 12_i32;
    branch(copy _6) -> [true: bb9, false: bb10];
  }

  bb3: {
    StorageLive(_9);
    _9 = copy _2 + 1_i32;
    _2 <- copy _9;
    StorageDead(_9);
    goto -> bb1;
  }

  bb4: {
    StorageDead(_2);
    _0 = copy _1;
    StorageDead(_1);
    return;
  }

  bb5: {
    StorageDead(_3);
    goto -> bb2;
  }

  bb6: {
    StorageDead(_3);
    goto -> bb4;
  }

  bb7: {
    StorageDead(_4);
    goto -> bb4;
  }

  bb8: {
    StorageLive(_7);
    _7 = copy _4 == 4_i32;
    branch(copy _7) -> [true: bb13, false: bb14];
  }

  bb9: {
    StorageDead(_6);
    goto -> bb7;
  }

  bb10: {
    StorageDead(_6);
    goto -> bb8;
  }

  bb11: {
    StorageDead(_4);
    goto -> bb3;
  }

  bb12: {
    StorageLive(_8);
    _8 = copy _1 + copy _4;
    _1 <- copy _8;
    StorageDead(_8);
    StorageDead(_4);
    goto -> bb3;
  }

  bb13: {
    StorageDead(_7);
    goto -> bb11;
  }

  bb14: {
    StorageDead(_7);
    goto -> bb12;
  }
}
"
`;

exports[`golden MIR an early return unwinds every scope it is inside 1`] = `
"export fn main: extern "C" () -> i32 {
  let _0: i32  [Owned/Trivial]
  let _1: i32  [Owned/Trivial] // outer
  let _2: i32  [Owned/Trivial] // middle
  let _3: i32  [Owned/Trivial] // inner

  bb0: {
    StorageLive(_1);
    _1 = 1_i32;
    StorageLive(_2);
    _2 = 2_i32;
    StorageLive(_3);
    _3 = 3_i32;
    _0 = copy _3;
    StorageDead(_3);
    StorageDead(_2);
    StorageDead(_1);
    return;
  }
}
"
`;

exports[`golden MIR short-circuiting is control flow, not an operator 1`] = `
"export fn main: extern "C" () -> i32 {
  let _0: i32  [Owned/Trivial]
  let _1: i32  [Owned/Trivial] // a
  let _2: bool  [Temporary/Trivial]
  let _3: bool  [Temporary/Trivial]
  let _4: bool  [Temporary/Trivial]

  bb0: {
    StorageLive(_1);
    _1 = 3_i32;
    StorageLive(_3);
    _3 = copy _1 > 1_i32;
    StorageLive(_2);
    branch(copy _3) -> [true: bb1, false: bb2];
  }

  bb1: {
    StorageLive(_4);
    _4 = copy _1 < 5_i32;
    _2 = copy _4;
    goto -> bb3;
  }

  bb2: {
    _2 = false;
    goto -> bb3;
  }

  bb3: {
    branch(copy _2) -> [true: bb6, false: bb7];
  }

  bb4: {
    _0 = 1_i32;
    StorageDead(_1);
    return;
  }

  bb5: {
    _0 = 0_i32;
    StorageDead(_1);
    return;
  }

  bb6: {
    StorageDead(_4);
    StorageDead(_3);
    goto -> bb4;
  }

  bb7: {
    StorageDead(_4);
    StorageDead(_3);
    goto -> bb5;
  }
}
"
`;

exports[`golden MIR a call is a terminator, and temporaries end with the statement 1`] = `
"fn twice: (i32) -> i32 {
  let _0: i32  [Owned/Trivial]
  let _1: i32  [Owned/Trivial]
  let _2: i32  [Temporary/Trivial]

  bb0: {
    StorageLive(_2);
    _2 = copy _1 + copy _1;
    _0 = copy _2;
    StorageDead(_2);
    StorageDead(_1);
    return;
  }
}

export fn main: extern "C" () -> i32 {
  let _0: i32  [Owned/Trivial]
  let _1: i32  [Owned/Trivial] // result
  let _2: i32  [Temporary/Trivial]
  let _3: i32  [Temporary/Trivial]
  let _4: i32  [Temporary/Trivial]

  bb0: {
    StorageLive(_2);
    _2 = twice(3_i32) -> [return: bb1];
  }

  bb1: {
    StorageLive(_3);
    _3 = twice(4_i32) -> [return: bb2];
  }

  bb2: {
    StorageLive(_4);
    _4 = copy _2 + copy _3;
    StorageLive(_1);
    _1 = copy _4;
    StorageDead(_4);
    StorageDead(_3);
    StorageDead(_2);
    _0 = copy _1;
    StorageDead(_1);
    return;
  }
}
"
`;

exports[`golden MIR a class: construction, virtual dispatch, and the generated destructor 1`] = `
"extern fn gf_print: extern "C" (string) -> void  // ext0

fn Base$drop: (Reference<Base>) -> void {
  let _0: void  [Owned/Trivial]
  let _1: Reference<Base>  [Owned/Borrow]

  bb0: {
    drop((*_1).0);
    return;
  }
}

fn Base$new: (Reference<Base>, string) -> void {
  let _0: void  [Owned/Trivial]
  let _1: Reference<Base>  [Owned/Borrow]
  let _2: string  [Owned/Owning]

  bb0: {
    (*_1).0 <- copy _2;
    return;
  }
}

fn Base$describe: (Reference<Base>) -> string {
  let _0: string  [Owned/Owning]
  let _1: Reference<Base>  [Owned/Borrow]

  bb0: {
    _0 = copy (*_1).0;
    StorageDead(_1);
    return;
  }
}

fn Derived$drop: (Reference<Derived>) -> void {
  let _0: void  [Owned/Trivial]
  let _1: Reference<Derived>  [Owned/Borrow]

  bb0: {
    drop((*_1).1);
    _0 = Base$drop(borrow _1) -> [return: bb1];
  }

  bb1: {
    return;
  }
}

fn Derived$new: (Reference<Derived>, string, string) -> void {
  let _0: void  [Owned/Trivial]
  let _1: Reference<Derived>  [Owned/Borrow]
  let _2: string  [Owned/Owning]
  let _3: string  [Owned/Owning]
  let _4: string  [Temporary/Owning]

  bb0: {
    StorageLive(_4);
    _4 = copy _2;
    _0 = Base$new(copy _1, borrow _4) -> [return: bb1];
  }

  bb1: {
    drop(_4);
    StorageDead(_4);
    (*_1).1 <- copy _3;
    return;
  }
}

fn Derived$describe: (Reference<Derived>) -> string {
  let _0: string  [Owned/Owning]
  let _1: Reference<Derived>  [Owned/Borrow]

  bb0: {
    _0 = copy (*_1).1;
    StorageDead(_1);
    return;
  }
}

export fn main: extern "C" () -> i32 {
  let _0: i32  [Owned/Trivial]
  let _1: Derived  [Owned/Polymorphic] // d
  let _2: Derived  [Temporary/Polymorphic]
  let _3: Reference<Derived>  [Temporary/Borrow]
  let _4: string  [Temporary/Owning]
  let _5: string  [Temporary/Owning]
  let _6: Reference<Derived>  [Temporary/Borrow]
  let _7: string  [Temporary/Owning]

  bb0: {
    StorageLive(_2);
    _2 = default;
    StorageLive(_3);
    _3 = &_2;
    StorageLive(_4);
    _4 = "a";
    StorageLive(_5);
    _5 = "b";
    _0 = Derived$new(copy _3, borrow _4, borrow _5) -> [return: bb1];
  }

  bb1: {
    StorageLive(_1);
    _1 = move _2;
    drop(_5);
    StorageDead(_5);
    drop(_4);
    StorageDead(_4);
    StorageDead(_2);
    StorageLive(_6);
    _6 = &_1;
    StorageLive(_7);
    _7 = virtual#1(copy _6) -> [return: bb2];
  }

  bb2: {
    _0 = gf_print(borrow _7) -> [return: bb3];
  }

  bb3: {
    drop(_7);
    StorageDead(_7);
    _0 = 0_i32;
    drop(_1);
    StorageDead(_1);
    return;
  }
}
"
`;

exports[`golden MIR a contract: the conversion and the itab dispatch 1`] = `
"extern fn gf_print: extern "C" (string) -> void  // ext0

fn Cat$drop: (Reference<Cat>) -> void {
  let _0: void  [Owned/Trivial]
  let _1: Reference<Cat>  [Owned/Borrow]

  bb0: {
    drop((*_1).0);
    return;
  }
}

fn Cat$new: (Reference<Cat>, string) -> void {
  let _0: void  [Owned/Trivial]
  let _1: Reference<Cat>  [Owned/Borrow]
  let _2: string  [Owned/Owning]

  bb0: {
    (*_1).0 <- copy _2;
    return;
  }
}

fn Cat$speak: (Reference<Cat>) -> string {
  let _0: string  [Owned/Owning]
  let _1: Reference<Cat>  [Owned/Borrow]

  bb0: {
    _0 = copy (*_1).0;
    StorageDead(_1);
    return;
  }
}

fn announce: (Speaker) -> void {
  let _0: void  [Owned/Trivial]
  let _1: Speaker  [Owned/Borrow]
  let _2: string  [Temporary/Owning]

  bb0: {
    StorageLive(_2);
    _2 = itab#0(copy _1) -> [return: bb1];
  }

  bb1: {
    _0 = gf_print(borrow _2) -> [return: bb2];
  }

  bb2: {
    drop(_2);
    StorageDead(_2);
    return;
  }
}

export fn main: extern "C" () -> i32 {
  let _0: i32  [Owned/Trivial]
  let _1: Cat  [Temporary/Polymorphic]
  let _2: Reference<Cat>  [Temporary/Borrow]
  let _3: string  [Temporary/Owning]
  let _4: Speaker  [Temporary/Borrow]

  bb0: {
    StorageLive(_1);
    _1 = default;
    StorageLive(_2);
    _2 = &_1;
    StorageLive(_3);
    _3 = "mew";
    _0 = Cat$new(copy _2, borrow _3) -> [return: bb1];
  }

  bb1: {
    StorageLive(_4);
    _4 = (Speaker) _1;
    _0 = announce(copy _4) -> [return: bb2];
  }

  bb2: {
    drop(_3);
    StorageDead(_3);
    drop(_1);
    StorageDead(_1);
    _0 = 0_i32;
    return;
  }
}
"
`;
